tests/spec/pass/interface_import_all.aja
import (
    "modules/iface_lib"
)

who = iface_lib.make("Uli")
print(who.speak("Yo"))
