tests/spec/fail/datetime_parse_bad_len.aja
import (
    "modules/datetime"
)

print(datetime.parseIso("2026-03-26"))
